Adicionando condicoes de vitoria

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
        <div id="Q9" class="corpo"> </div>
        
   </section>
+  <section class="ResetBUTTON">
+    <button class="Reset">Reset</button>
+  </section>
 </main>
 <footer>
 
@@ -31,6 +34,8 @@
 </body>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+2:wght@300&family=Ubuntu&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=M+PLUS+2:wght@300&family=Sedgwick+Ave&family=Ubuntu&display=swap');
+
 *{
     margin:0;
     padding:0;
@@ -132,19 +137,37 @@ main{
 }
 .PlayerX{
     color: Red;
-   
+  font-family: 'Sedgwick Ave', cursive;
 }
 .PlayerO{
  color: blue;
- .
+ font-family: 'Sedgwick Ave', cursive;
+}
+.ResetBUTTON{
+    width: 100px;
+    position: relative;
+    top: 430px;
+    left:416px;
+}
+.Reset{
+   min-height: 60px;
+   min-width: 150px;
+   font-size: 30px;
+   font-family: 'M PLUS 2', sans-serif;
+   background-color:#79F539;
+   color: #62992E;
+}
+.Reset:hover{
+   background-color:#62992E;
+   color: #79F539;
 }
 </style>
 <script>
-
 window.addEventListener('DOMContentLoaded',() =>{
     
 const contai= document.querySelector(".container");  const Estrutura =Array.from(document.querySelectorAll(".corpo"));
 const playerDisplay=document.querySelector('.display-player')
+const Reset=document.querySelector('.Reset');
 let Playeratual="X";
 let gameactive= true;
 const VitoriaX='Jogador X ganhou';
@@ -153,19 +176,21 @@ const velha='Deu velha!';
   
 let Board =['','','','','','','','','']
 const updateBoard= (index) =>{
-    Board[index]="Playeratual"
+    Board[index]=Playeratual;
 }
 const action= (corpo, index)=>{
     if(acaoValida(corpo)&& gameactive){
        corpo.innerText=Playeratual;
-       corpo.classList.add(`Player{Playeratual}`);
+       corpo.classList.add(`Player${Playeratual}`);
        updateBoard(index);
+       checarSeTemWin();
        changePlayer();
     }
 };
 
 const acaoValida=(corpo)=>{
     if(corpo.innerText==='X' || corpo.innerText==='O'){
+        alert("Um jogador já escolheu essa posição.");
         return false;
     }
     return true;
@@ -175,11 +200,44 @@ playerDisplay.classList.remove(`Player${Playeratual}`);
 Playeratual = Playeratual === 'X' ? 'O' : 'X';
 playerDisplay.innerText= Playeratual;
 playerDisplay.classList.add(`Player${Playeratual}`)
-}
-
+};
+const condicoesdevitoria = [
+ [0, 1, 2], 
+ [3, 4, 5], 
+ [6, 7, 8], 
+ [0, 3, 6],
+ [1, 4, 7], 
+ [2, 5, 8], 
+ [0, 4, 8], 
+ [2, 4, 6] 
+ ];
+ function checarSeTemWin(){
+  let roundwon = false;
+   for(i=0;i<=7; i++){
+     const victory=condicoesdevitoria[i];
+     const a= Board[victory[0]];
+     const b= Board[victory[1]];
+     const c= Board[victory[2]];
+     if(a===''||b===''||c===''){
+       continue;
+     }
+     if(a === b && b === c){
+         roundwon=true;
+         break;
+     }
+   }
+ 
+ if (roundwon){
+   Playeratual==='X' ? alert(VitoriaX):alert(VitoriaO);
+ }
+ if(!Board.includes('')){
+   console.log("Deu velha")
+  }
+ };
 Estrutura.forEach((corpo, index)=>{   corpo.addEventListener('click',()=>{ action(corpo, index)});
 });
-  
+}
+Reset.addEventListener('click',ResetButton)
  })
 </script>
 </html>
