--- a/index.html
+++ b/index.html
@@ -229,14 +229,17 @@ const condicoesdevitoria = [
  
  if (roundwon){
    Playeratual==='X' ? alert(VitoriaX):alert(VitoriaO);
+   ResetButton
     Estrutura.forEach((corpo)=>{
       corpo.innerText='';
       corpo.classList.remove('PlayerX');
-      corpo.classList.remove('PlayerO')
+      corpo.classList.remove('PlayerO');
+     
    })
  }
  if(!Board.includes('')){
-   console.log("Deu velha")
+   alert("Deu velha");
+   ResetButton;
   }
  };
 Estrutura.forEach((corpo, index)=>{   corpo.addEventListener('click',()=>{ action(corpo, index)});
