--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ const condicoesdevitoria = [
  
  if (roundwon){
    Playeratual==='X' ? alert(VitoriaX):alert(VitoriaO);
-   ResetButton
+   ResetButton()
     Estrutura.forEach((corpo)=>{
       corpo.innerText='';
       corpo.classList.remove('PlayerX');
@@ -239,7 +239,7 @@ const condicoesdevitoria = [
  };
  if(!Board.includes('')){
    alert("Deu velha");
-   ResetButton
+   ResetButton()
   }
  };
 Estrutura.forEach((corpo, index)=>{   corpo.addEventListener('click',()=>{ action(corpo, index)});
